--- a/XEN/casestudies.html
+++ b/XEN/casestudies.html
@@ -528,7 +528,7 @@
 		</main><!-- animsition-overlay end -->
 		
 		<!-- footer start -->
-		<footer class="footer dark-bg-1">
+		<footer class="footer light-bg-3">
 			<!-- flex-container start -->
 			<div class="flex-container container top-bottom-padding-90">
 				<!-- column start -->
@@ -540,7 +540,7 @@
 				<!-- column start -->
 				<div class="three-columns bottom-padding-60">
 					<div class="content-left-right-margin-10">
-						<ul class="footer-menu text-color-4">
+						<ul class="footer-menu text-color-5">
 							<li><a class="pointer-large animsition-link small-title-oswald hover-color" href="index.html">Home</a></li>
 							<li><a class="pointer-large animsition-link small-title-oswald hover-color" href="about.html">About</a></li>
 							<li><a class="pointer-large animsition-link small-title-oswald hover-color" href="services.html">Services</a></li>
@@ -552,10 +552,10 @@
 				<!-- column start -->
 				<div class="four-columns bottom-padding-60">
 					<div class="content-left-right-margin-10 footer-center-mobile">
-						<ul class="footer-information text-color-4">
-							<li><i class="far fa-envelope"></i><a href="#" class="xsmall-title-oswald">ahmedj@digitaladitude.com</a></li>
-							<li><i class="fas fa-mobile-alt"></i><a href="#" class="xsmall-title-oswald">	1-800-961-4113 | 647-745-6214</a></li>
-							<li><i class="fas fa-map-marker-alt"></i><a href="#" class="xsmall-title-oswald text-height-17">111 Queen Street E, Suite 450, Toronto, Ontario, M5C 1S2<br><span></span></a></li>
+						<ul class="footer-information text-color-5">
+							<li><i class="far text-color-1 fa-envelope"></i><a href="#" class="xsmall-title-oswald hover">ahmedj@digitaladitude.com</a></li>
+							<li><i class="fas text-color-1 fa-mobile-alt"></i><a href="#" class="xsmall-title-oswald hover">1-800-961-4113| 647-745-6214</a></li>
+							<li><i class="fas text-color-1 fa-map-marker-alt"></i><a href="#" class="xsmall-title-oswald hover text-height-17">111 Queen Street E, Suite 450, Toronto, Ontario, M5C 1S2<br><span></span></a></li>
 						</ul>
 					</div>
 				</div><!-- column end -->
@@ -581,13 +581,7 @@
 						
 						</ul>
 					</div>
-				</div><!-- column end -->
-				<!-- column start -->
-				<div class="twelve-columns">
-					<p class="p-letter-style text-color-4 footer-copyright">&copy; Copyright 2019 XEN. Theme by <a href="#">Jinna Gik</a></p>
-				</div><!-- column end -->
-			</div><!-- flex-container end -->
-		</footer><!-- footer end -->
+				</div><!-- column end -
 		
 		<!-- scripts --> 
         <script src="assets/js/plugins.js"></script> 
