--- a/XEN/index.html
+++ b/XEN/index.html
@@ -132,8 +132,12 @@
 								      	<h2 class="large-title-bold">
 							  				<span class="slider-title-fill size-2 slider-tr-delay01" data-text="Digital Requires">Digital Requires</span><br>
 											  <span class="slider-title-fill size-2 slider-tr-delay01" data-text="a New Attitude">a New Attitude</span><br>
-							  				<span class="slider-title-fill size-3 slider-tr-delay02" data-text="An Attitude of Growth, Measurability & Transparency">An Attitude of Growth, Measurability & Transparency</span><br>
-
+											  <h3 class="large-title-bold text-color-4">
+												<span class="slider-overlay2 size-3 slider-tr-delay01">An Attitude of Growth, Measurability & Transparency</span><br>
+  
+											</h3>
+							  				<!-- <span class="slider-title-fill size-3 slider-tr-delay02" data-text="An Attitude of Growth, Measurability & Transparency">An Attitude of Growth, Measurability & Transparency</span><br> -->
+												
 						  				</h2>
 						  				
 									  	<div class="slider-fade slider-tr-delay07 top-margin-30">
