--- a/XEN/about.html
+++ b/XEN/about.html
@@ -181,7 +181,7 @@
 			
 			
 			<!-- section start -->
-			<section class="light-bg-2 c-mb-10 top-bottom-padding-30" data-midnight="black">
+			<section class="light-bg-2 c-mb-20 top-bottom-padding-30" data-midnight="black">
 				<!-- container start -->
 				<div data-animation-container class="container medium bottom-padding-30">
 					
@@ -233,25 +233,25 @@
 					<div class="d-flex f-r d-g response-999 top-padding-60">
 
 						<div data-animation-child data-animation="fade-anim" class="d-f-c-c b fade-anim-box tr-delay01">
-							<img data-animation-child data-animation="fade-anim" class="fade-anim-box tr-delay01" src="assets/images/about/e1.png" alt="img">
-							<h2 class="small-title-oswald top-margin-30 text-color-2">Strategic Direction</h2>
+							<img src="assets/images/about/e1.png" alt="img">
+							<h2 class="medium-title-oswald top-margin-30 text-color-2">Strategic Direction</h2>
 							<p class="text-color-2 p-style">We provide clients with clear actionable and strategic direction to maximize their digital marketing efforts.</p>
 						</div>
 						
 						<div data-animation-child data-animation="fade-anim" class="d-f-c-c b fade-anim-box tr-delay02">
 							<img src="assets/images/about/e2.png" alt="img">
-							<h2 class="small-title-oswald top-margin-30  text-color-2">Strategic Direction</h2>
-							<p class="text-color-2 p-style">We provide clients with clear actionable and strategic direction to maximize their digital marketing efforts.</p>
+							<h2 class="medium-title-oswald top-margin-30  text-color-2">Digital Marketing Planning</h2>
+							<p class="text-color-2 p-style">From concept to execution, we handle all aspects of your digital marketing plan.</p>
 						</div>
 						<div data-animation-child data-animation="fade-anim" class="d-f-c-c b fade-anim-box tr-delay03">
 							<img src="assets/images/about/e3.png" alt="img">
-							<h2 class="small-title-oswald top-margin-30 text-color-2">Strategic Direction</h2>
-							<p class="text-color-2 p-style">We provide clients with clear actionable and strategic direction to maximize their digital marketing efforts.</p>
+							<h2 class="medium-title-oswald top-margin-30 text-color-2">Lead Generation</h2>
+							<p class="text-color-2 p-style">We specialize in creating robust lead generation programs that give your business immediate traction and build momentum.</p>
 						</div>
 						<div data-animation-child data-animation="fade-anim" class="d-f-c-c b fade-anim-box tr-delay04">
 							<img src="assets/images/about/e4.png" alt="img">
-							<h2 class="small-title-oswald top-margin-30 text-color-2">Strategic Direction</h2>
-							<p class="text-color-2 p-style">We provide clients with clear actionable and strategic direction to maximize their digital marketing efforts.</p>
+							<h2 class="medium-title-oswald top-margin-30 text-color-2">Advertising</h2>
+							<p class="text-color-2 p-style">In today's world, digital advertising is key. We craft well-thought-out, sound digital marketing strategies to power your campaigns.</p>
 						</div>
 
 					</div>
