--- a/XEN/about.html
+++ b/XEN/about.html
@@ -231,7 +231,7 @@
 					<div class="t-l">
 						<h2 data-animation-child class="large-title text-color-2 overlay-anim-box2 overlay-dark-bg-2 tr-delay01" data-animation="overlay-anim2">Our Expertise</h2>
 					</div>
-					<div class="d-flex f-r d-g response-999 top-padding-60">
+					<div class="d-grid d-g response-999 top-padding-60">
 
 						<div data-animation-child data-animation="fade-anim" class="d-f-c-c b fade-anim-box tr-delay01">
 							<img src="assets/images/about/e1.png" alt="img">
@@ -271,25 +271,25 @@
 								<h2 data-animation-child class="medium-title text-color-5 fade-anim-box tr-delay01" data-animation="fade-anim">Why Choose Digital Aditude?</h2>
 							</div>
 						<div data-animation-child data-animation="fade-anim" class="fade-anim-box tr-delay01">
-							<h2 class="m-t top-margin-30 text-color-2">Inovative Approach:</h2>
+							<h2 class="m-t top-margin-30 text-color-2"><img class="h" src="./assets/images/about/check.png"> &nbsp; Inovative Approach:</h2>
 							<p class="text-color-2 p-style-medium">At Digital Aditude, we stay ahead of the curve with cutting-edge marketing techniques and innovative strategies. Our team constantly adapts to the ever-changing digital landcsape ensuring your business remains at the forefront of your industry.</p>
 						</div>
 						<div data-animation-child data-animation="fade-anim" class="fade-anim-box tr-delay02">
-							<h2 class="m-t top-margin-30 text-color-2">Customized Solutions:</h2>
+							<h2 class="m-t top-margin-30 text-color-2"><img class="h" src="./assets/images/about/check.png"> &nbsp; Customized Solutions:</h2>
 							<p class="text-color-2 p-style-medium">We understand that every business is unique. That's why we tailor our services to meet your specific needs and objectives, delivering bespoke solutions that drive real results.</p>
 						</div>
 					</div>
 					<div class="d-f-c c-mb-10">
 						<div data-animation-child data-animation="fade-anim" class="fade-anim-box tr-delay01">
-							<h2 class="m-t top-margin-30 text-color-2">Proven Track Record:</h2>
+							<h2 class="m-t top-margin-30 text-color-2"><img class="h" src="./assets/images/about/check.png"> &nbsp; Proven Track Record:</h2>
 							<p class="text-color-2 p-style-medium">Our Success stories speak for themselves. We have a proven track record of helping businesses achieve significant growth and ROI through targeted digital marketing efforts.</p>
 						</div>
 						<div data-animation-child data-animation="fade-anim" class="fade-anim-box tr-delay01">
-							<h2 class="m-t top-margin-30 text-color-2">Transparent Reporting:</h2>
+							<h2 class="m-t top-margin-30 text-color-2"><img class="h" src="./assets/images/about/check.png"> &nbsp; Transparent Reporting:</h2>
 							<p class="text-color-2 p-style-medium">We believe in complete transparency. Our comprehensive reporting provides you with clear insights into your campaign performance, so you know exactly where your marketing dollars are going and what they're achieving.</p>
 						</div>
 						<div data-animation-child data-animation="fade-anim" class="fade-anim-box tr-delay02">
-							<h2 class="m-t top-margin-30 text-color-2">Dedicated Support:</h2>
+							<h2 class="m-t top-margin-30 text-color-2"><img class="h" src="./assets/images/about/check.png"> &nbsp; Dedicated Support:</h2>
 							<p class="text-color-2 p-style-medium">Our commitment to your success extends beyond standard office hours. With dedicated support, we are always available to answer your questions, address your concerns, and optimize your campaigns for maximum effectiveness.</p>
 						</div>
 					</div>
