--- a/XEN/about.html
+++ b/XEN/about.html
@@ -160,8 +160,8 @@
 							<!-- column start -->
 							<div class="four-columns">
 								<div class="content-right-margin-20 bottom-padding-30">
-									<h2 data-animation-child class="medium-title title-fill" data-animation="title-fill-anim" data-text="An Attitude of Growth,">An Attitude of Growth,</h2>
-									<h2 data-animation-child class="medium-title title-fill" data-animation="title-fill-anim" data-text="Measurability & Transparency">Measurability & Transparency</h2>
+									<h2 data-animation-child class="xmedium-title-oswald title-fill" data-animation="title-fill-anim" data-text="An Attitude of Growth,">An Attitude of Growth,</h2>
+									<h2 data-animation-child class="xmedium-title-oswald title-fill" data-animation="title-fill-anim" data-text="Measurability & Transparency">Measurability & Transparency</h2>
 								</div>
 								<div class="twelve-columns">
 									<!-- <p data-animation-child class="p-letter-style text-color-4 text-height-13 fade-anim-box tr-delay04" data-animation="fade-anim">OUR DRIVING FORCE</p> -->
