--- a/XEN/contact.html
+++ b/XEN/contact.html
@@ -8,7 +8,8 @@
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7COswald:300,400,500,600,700" rel="stylesheet" type="text/css">
-		
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
 		<!-- styles -->	
         <link href="assets/css/plugins.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
@@ -221,7 +222,7 @@
 						<div class="container small top-bottom-padding-120 form-box">
 							<h4 class="small-title-oswald text-color-4 text-center">Lets Get In Touch!</h4>
 							<!-- flex-container start -->
-							<form class="flex-container top-padding-90" method="post" name="formobrsv" id="send_form">
+							<form class="flex-container top-padding-90" method="post" name="formobrsv" id="contact-form">
 								<!-- column start -->
 								<div class="four-columns">
 									<div class="content-right-margin-10 input-box">
@@ -348,10 +349,14 @@
 						
 						</ul>
 					</div>
-				</div><!-- column end -
+				</div><!-- column end -->
 		
 		<!-- scripts --> 
+		 <script src="assets/ajax/mail.js"></script>
+		
         <script src="assets/js/plugins.js"></script> 
         <script src="assets/js/main.js"></script>
+		
 	</body>
+	
 </html>
