removed ahmeds number

--- a/XEN/contact.html
+++ b/XEN/contact.html
@@ -322,7 +322,7 @@
 					<div class="content-left-right-margin-10 footer-center-mobile">
 						<ul class="footer-information text-color-5">
 							<li><i class="far text-color-1 fa-envelope"></i><a href="#" class="xsmall-title-oswald hover">info@digitaladitude.com</a></li>
-							<li><i class="fas text-color-1 fa-mobile-alt"></i><a href="#" class="xsmall-title-oswald hover">1-800-961-4113| 647-745-6214</a></li>
+							<li><i class="fas text-color-1 fa-mobile-alt"></i><a href="#" class="xsmall-title-oswald hover">1-800-961-4113</a></li>
 							<li><i class="fas text-color-1 fa-map-marker-alt"></i><a href="#" class="xsmall-title-oswald hover text-height-17">111 Queen Street E, Suite 450, Toronto, Ontario, M5C 1S2<br><span></span></a></li>
 						</ul>
 					</div>
